--- a/src/main/webapp/WEB-INF/views/create.html
+++ b/src/main/webapp/WEB-INF/views/create.html
@@ -24,6 +24,13 @@
             <label>Description</label>
             <input type="text" th:field="*{description}"/>
         </div>
+        <div>
+            <label>Category</label>
+            <select th:field="*{category}">
+                <option th:each="c:${listCategory}" th:value="${c}" th:text="${c.name}"></option>
+            </select>
+<!--            <input type="text" />-->
+        </div>
         <input type="submit" value="Save">
     </form>
 </div>
