--- a/src/main/webapp/WEB-INF/views/edit.html
+++ b/src/main/webapp/WEB-INF/views/edit.html
@@ -24,6 +24,10 @@
             <label>Description</label>
             <input type="text" th:field="*{description}"/>
         </div>
+        <div>
+            <label>Category</label>
+            <input type="text" th:field="*{category.id}"/>
+        </div>
         <input type="submit" value="Modify">
     </form>
 </div>
