--- a/src/main/webapp/WEB-INF/views/home.html
+++ b/src/main/webapp/WEB-INF/views/home.html
@@ -9,11 +9,18 @@
         Add new products
     </a>
 </p>
+<!--search by product name-->
 <form action="/products/search" method="post">
     <input type="text" name="name" placeholder="Input name search">
     <input type="submit" value="Search Product">
 </form>
-
+Search By Category Name
+<form action="/products/searchCate" method="post" >
+    <select name="id">
+            <option th:each="p:${listCategory}" th:value="${p.id}" th:text="${p.name}"></option>
+    </select>
+    <input type="submit" value="Search Category">
+</form>
 <table id = "products">
     <thead>
     <tr>
@@ -36,6 +43,7 @@
     </tr>
     </tbody>
 </table>
+<!--phan trang-->
 <div>
     <a th:href="@{'/products'(page=${productList.number - 1})}" th:if="${productList.hasPrevious()}">Previous</a>
     <span th:text="${productList.number + 1}"></span>/<span th:text="${productList.totalPages}"></span>
