--- a/src/main/webapp/WEB-INF/views/home.html
+++ b/src/main/webapp/WEB-INF/views/home.html
@@ -21,12 +21,26 @@ Search By Category Name
     </select>
     <input type="submit" value="Search Category">
 </form>
+<form action="/products/top5">
+    <input type="submit" value="Find Top 5 Product By Price">
+</form>
+<form action="/products/top5bydate">
+    <input type="submit" value="Find Top 5 Product By Date">
+</form>
+<div>
+    <form action="/products/sum">
+        <input type="submit" value="Sum Price">
+    </form>
+    <h3 th:text="${sum}"></h3>
+</div>
 <table id = "products">
     <thead>
     <tr>
         <th>Name</th>
         <th>Price</th>
         <th>Description</th>
+        <th>Date</th>
+        <th>Quantity</th>
         <th>Category</th>
         <th>Edit</th>
         <th>Delete</th>
@@ -37,6 +51,8 @@ Search By Category Name
         <td th:text="${product.name}"></td>
         <td th:text="${product.price}"></td>
         <td th:text="${product.description}"></td>
+        <td th:text="${product.date}"></td>
+        <td th:text="${product.quantity}"></td>
         <td th:text="${product.category.name}"></td>
         <td><a th:href="@{/products/edit(id=${product.getId()})}">edit</a></td>
         <td><a onclick ="return confirm('Bạn có chắc chắn muốn xóa không?')" th:href="@{/products/delete(id=${product.getId()})}">delete</a></td>
