--- a/src/main/webapp/WEB-INF/views/layout.html
+++ b/src/main/webapp/WEB-INF/views/layout.html
@@ -45,7 +45,7 @@
         }
 
         input[type=submit] {
-            width: 300px%;
+            width: 300%;
             background-color: #4CAF50;
             color: white;
             padding: 14px 20px;
@@ -73,7 +73,7 @@
 <body>
 
 <footer th:fragment="footer">
-    &copy; HungDepZai
+    &copy; Bạn Hiếu dấu tên
 </footer>
 </body>
 </html>
