--- a/src/main/webapp/WEB-INF/views/layout.html
+++ b/src/main/webapp/WEB-INF/views/layout.html
@@ -45,7 +45,7 @@
         }
 
         input[type=submit] {
-            width: 300%;
+            width: 300px%;
             background-color: #4CAF50;
             color: white;
             padding: 14px 20px;
